# librlimit

./: .gitignore  AUTHORS  COPYING  ChangeLog  Makefile.am  NEWS  README  TODO  autogen.sh  configure.ac
doc/: Makefile.am
python/: Subprocess.py  examples.py
python/rlimit/: Subprocess.py  rlimit.py
src/: Makefile.am  rlimit-debug.c  rlimit-debug.i  rlimit.c  rlimit.h
test/: 01_io.c  01_stdout.c  02_timeout.c  03_notimeout.c  04_forbid_syscall.c  05_profile_sleep.c  06_profile_stack_alloc.c  07_profile_malloc.c  08_forbid_syscall_timeouted.c  09_ls_R.c  10_expect.c  11_expect_failed.c  Makefile.am  test-runner.sh
test/utils/: Makefile.am  test_fork.c  test_io.c  test_malloc.c  test_stack_alloc.c
