## Process this file with automake to produce Makefile.in
AM_CFLAGS =
AM_LDFLAGS =

AUTOMAKE_OPTIONS=subdir-objects

CLEANFILES=
BUILT_SOURCES=

all:

## librlimit
#############
lib_LTLIBRARIES = librlimit.la

librlimit_la_SOURCES = rlimit.c rlimit.h

librlimit_la_CFLAGS = -std=c99
librlimit_la_CPPFLAGS =
librilimit_la_LDFLAGS  =

CLEANFILES +=

DISTCLEANFILES =


MAINTAINERCLEANFILES = \
        Makefile.in config.h.in compile.log
