## Process this file with automake to produce Makefile.in

bin_PROGRAMS = test_fork test_io test_malloc test_stack_alloc

test_fork_SOURCES = test_fork.c
test_io_SOURCES = test_io.c
test_malloc_SOURCES = test_malloc.c
test_stack_alloc_SOURCES = test_stack_alloc.c

MAINTAINERCLEANFILES = \
	Makefile.in
